packages/engine/src/tests/snapshots/engine__tests__partition__broken_unknown_hash_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 2,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      23
    ],
    "items": 4,
    "width": 81.83,
    "height": 16.38,
    "x": -40.69,
    "y": 40.32
  },
  {
    "range": [
      25,
      31
    ],
    "items": 2,
    "width": 54.16,
    "height": 22.4,
    "x": 0.0,
    "y": 75.26
  }
]
