packages/engine/src/tests/snapshots/engine__tests__partition__broken_unknown_hash_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 12,
      "end": 21
    },
    "severity": "error",
    "message": "unknown variable: undefined",
    "hints": []
  }
]
