packages/engine/src/tests/snapshots/engine__tests__partition__broken_unknown_in_heading_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      29
    ],
    "items": 10,
    "width": 219.62,
    "height": 174.17,
    "x": -86.31,
    "y": -1.28
  }
]
