packages/engine/src/tests/snapshots/engine__tests__partition__broken_unknown_in_list_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 8,
    "width": 64.56,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      8,
      36
    ],
    "items": 11,
    "width": 104.08,
    "height": 63.14,
    "x": 17.6,
    "y": 21.76
  },
  {
    "range": [
      37,
      44
    ],
    "items": 12,
    "width": 45.81,
    "height": 22.4,
    "x": 18.35,
    "y": 82.14
  }
]
