packages/engine/src/tests/snapshots/engine__tests__partition__broken_unknown_in_quote_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      16
    ],
    "items": 7,
    "width": 86.76,
    "height": 59.1,
    "x": -43.15,
    "y": 0.0
  }
]
